[gd_scene load_steps=32 format=2]

[ext_resource path="res://Games/JudgementGame/Game/board/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/JudgementGame/icons/settings.png" type="Texture" id=2]
[ext_resource path="res://Assets/JudgementGame/fonts/roboto_b_36.tres" type="DynamicFont" id=3]
[ext_resource path="res://Games/JudgementGame/Game/game/game_scene.gd" type="Script" id=4]
[ext_resource path="res://Assets/Art/JudgementIcon.png" type="Texture" id=5]
[ext_resource path="res://Games/JudgementGame/Game/settings/SettingsScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/SpaceGrotesk-VariableFont_wght.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.776471, 0.886275, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.0901961, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.415686 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=15]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsScreen:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1300 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFontData" id=17]
font_path = "res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-SemiBold.ttf"

[sub_resource type="DynamicFont" id=18]
size = 90
outline_size = 1
font_data = SubResource( 17 )

[sub_resource type="DynamicFont" id=19]
size = 50
font_data = SubResource( 17 )

[sub_resource type="DynamicFont" id=20]
size = 65
font_data = SubResource( 17 )

[sub_resource type="DynamicFont" id=21]
size = 50
font_data = SubResource( 17 )

[sub_resource type="DynamicFont" id=22]
size = 65
font_data = SubResource( 17 )

[node name="GameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 716.0
margin_bottom = 1276.0
custom_constants/separation = 110

[node name="GameView" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 6.0
margin_right = 706.0
margin_bottom = 700.0
rect_min_size = Vector2( 700, 700 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_top = 110
custom_constants/margin_bottom = -110

[node name="BackgroundBoard" type="Panel" parent="MarginContainer/VBoxContainer/GameView"]
margin_top = 110.0
margin_right = 700.0
margin_bottom = 810.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Board" parent="MarginContainer/VBoxContainer/GameView" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 700.0
margin_bottom = 810.0

[node name="BoardBorder" type="Panel" parent="MarginContainer/VBoxContainer/GameView"]
margin_top = 110.0
margin_right = 700.0
margin_bottom = 810.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="StartOverlay" type="Panel" parent="MarginContainer/VBoxContainer/GameView"]
margin_top = 110.0
margin_right = 700.0
margin_bottom = 810.0
mouse_filter = 2

[node name="TextOverlay" type="Label" parent="MarginContainer/VBoxContainer/GameView/StartOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Click to Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 810.0
margin_right = 712.0
margin_bottom = 814.0
custom_styles/separator = SubResource( 5 )

[node name="Statistics" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 924.0
margin_right = 712.0
margin_bottom = 1084.0
rect_min_size = Vector2( 0, 160 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Statistics"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Statistics/Sections"]
margin_right = 354.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimerHeader" type="Label" parent="MarginContainer/VBoxContainer/Statistics/Sections/TimerSection"]
margin_right = 354.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TIME TAKEN:"
align = 1
valign = 2

[node name="Timer" type="Label" parent="MarginContainer/VBoxContainer/Statistics/Sections/TimerSection"]
margin_top = 70.0
margin_right = 354.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "##"
align = 1

[node name="MovesSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Statistics/Sections"]
margin_left = 358.0
margin_right = 712.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MovesHeader" type="Label" parent="MarginContainer/VBoxContainer/Statistics/Sections/MovesSection"]
margin_right = 354.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MOVES"
align = 1
valign = 2

[node name="Moves" type="Label" parent="MarginContainer/VBoxContainer/Statistics/Sections/MovesSection"]
margin_top = 70.0
margin_right = 354.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "##"
align = 1

[node name="StatsView" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 716.0
margin_right = 712.0
margin_bottom = 992.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsView"]
margin_left = 8.0
margin_right = 704.0
margin_bottom = 276.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
visible = false
margin_right = 8.0
margin_bottom = 278.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 8

[node name="Time" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 128.0
margin_top = 88.0
margin_right = 218.0
margin_bottom = 188.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="TimeTitle" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Time"]
margin_right = 90.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time"
align = 1
valign = 1

[node name="TimeValue" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Time"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0s"
align = 1
valign = 1

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
visible = false
margin_left = 106.0
margin_right = 114.0
margin_bottom = 278.0
custom_styles/separator = SubResource( 9 )
custom_constants/separation = 8

[node name="Moves" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 350.0
margin_top = 88.0
margin_right = 696.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MoveTitle" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Moves"]
margin_right = 346.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Moves"
align = 1
valign = 1

[node name="MoveValue" type="Label" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer/Moves"]
margin_top = 52.0
margin_right = 346.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
visible = false
margin_left = 217.0
margin_right = 233.0
margin_bottom = 278.0
custom_styles/separator = SubResource( 10 )
custom_constants/separation = 16

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
visible = false
margin_left = 406.0
margin_right = 422.0
margin_bottom = 278.0
custom_styles/separator = SubResource( 10 )
custom_constants/separation = 16

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
visible = false
margin_left = 426.0
margin_right = 553.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="VSeparator5" type="VSeparator" parent="MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
visible = false
margin_left = 406.0
margin_right = 414.0
margin_bottom = 278.0
custom_styles/separator = SubResource( 11 )
custom_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 1194.0
margin_right = 712.0
margin_bottom = 1272.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 12 )
custom_constants/separation = -20

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/HSeparator2"]
margin_left = 85.0
margin_right = 285.0
margin_bottom = 70.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 13 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HSeparator2"]
margin_left = 329.0
margin_right = 365.0
margin_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HSeparator2"]
margin_left = 415.0
margin_right = 615.0
margin_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 14 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_settings = SubResource( 15 )

[node name="SettingsScreen" parent="." instance=ExtResource( 6 )]
margin_top = 1300.0
margin_bottom = 1300.0

[node name="GameEnd" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GameEnd"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.776471, 0.886275, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameEnd"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -460.0
margin_right = 300.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEndContainer" type="VBoxContainer" parent="GameEnd"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameIcon" type="TextureRect" parent="GameEnd/GameEndContainer"]
margin_right = 720.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="GameName" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 404.0
margin_right = 720.0
margin_bottom = 526.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 18 )
text = "Judgement"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTakenMessage" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 530.0
margin_right = 720.0
margin_bottom = 652.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "You took"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTaken" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 656.0
margin_right = 720.0
margin_bottom = 778.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 20 )
text = "## Seconds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesTakenMessage" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 782.0
margin_right = 720.0
margin_bottom = 904.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 21 )
text = "and"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesTaken" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 908.0
margin_right = 720.0
margin_bottom = 1030.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 22 )
text = "## Moves"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="game_started" from="MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_game_started"]
[connection signal="game_won" from="MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_game_won"]
[connection signal="moves_updated" from="MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_moves_updated"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StatsView/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSeparator2/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSeparator2/BackButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSeparator2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="background_update" from="SettingsScreen" to="." method="_on_SettingsScreen_background_update"]
[connection signal="board_size_update" from="SettingsScreen" to="." method="_on_SettingsScreen_board_size_update"]
[connection signal="hide_settings" from="SettingsScreen" to="." method="_on_SettingsScreen_hide_settings"]
[connection signal="show_numbers_update" from="SettingsScreen" to="." method="_on_SettingsScreen_show_numbers_update"]
